# template_RTD

./: .readthedocs.yaml  README.md  codemeta.json  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: API.rst  conf.py  index.rst  install.rst  usage.rst
my_package/: __init__.py  dummy.py
