[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
authors = [{name = "Willem Boone", email = "willem.boone@vliz.be"}]
dynamic = ["dependencies"]

# Regular PyPI dependencies
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
docs = [
    "sphinx == 7.1.2",
    "sphinx-rtd-theme == 1.3.0rc1"
]
tests = ["pytest"]